[package]
name = "dos-jam-july-2024"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A relaxing tile permutation puzzle game for MS-DOS"

[lib]
crate-type = ["staticlib"]
name = "tilers"

[dependencies]
dos_x = { version = "0.1.0", git = "https://github.com/Enet4/dos-rs", rev = "fb0249a6" }
minipng = "0.1.1"
tinyrand = "0.5.0"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
strip = "debuginfo"
panic = "abort"
lto = "fat"
